# zellij-plugins

./: CONTEXT.md  Cargo.toml  README.md  moon.yml
.agents/skills/saorsa-tui/: SKILL.md
.agents/skills/saorsa-tui/references/: api.md
.github/tasks/: release-automation.bats
.github/workflows/: publish.yml
.memory/zellij-session-picker/: research-1126eff4-zellij-tabbar-session-picker-button-implementation.md  research-4ed8fd60-zellij-tabbar-session-picker-button-2026-07-15.md  research-b8154b13-zellij-tabbar-session-picker-button-2026-07-15.md
.moon/: workspace.yml
.moon/tasks/: build-crate.yml  publish-crate.yml
pkgs/zellij-tabbar/: Cargo.toml  README.md  build.rs  demo.kdl  moon.yml
pkgs/zellij-tabbar/src/: main.rs  render.rs
pkgs/zellij-tabbar/src/render/: layout.rs  mod.rs  template.rs
pkgs/zellij-tabbar/src/template/: clock.jinja  main.jinja  session.jinja
pkgs/zellij-tabbar/tests/: template_e2e.bats
pkgs/zellij-tabbar/tests/helpers/: pty_client.py
pkgs/zellij-template-render/: Cargo.toml  README.md  moon.yml
pkgs/zellij-template-render/src/: host.rs  layout.rs  lib.rs  template.rs
src/: line.rs  main.rs
